Bug 256374 - Grouping with derived fields does not work correctly
Summary: Grouping with derived fields does not work correctly
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3
Platform: RedHat Enterprise Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-08 16:29 UTC by kexxxi
Modified: 2010-11-15 01:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kexxxi 2010-11-08 16:29:51 UTC
Version:           2.3 (using KDE 4.5.2) 
OS:                Linux

The group view is not updated correctly when grouping is based on derived field and an entry is updated in such a way that grouping changes.

Reproducible: Always

Steps to Reproduce:
1. Create a new custom collection.

2. Add a simple text field 'Country' and a number field 'Year' to the collection.

3. Add a new derived field CountryYear with template '%{country} - %{year}' to the collection. Allow grouping for the field.

4. Create two new entries: [Title: 'first', Country: 'USA', Year: 2000] and [Title: 'second', Country: 'USA', Year: 2001]. Fields are now grouped into two groups 'USA - 2000' and 'USA - 2001'.

5. Edit the year of the second entry from 2001 to 2000.


Actual Results:  
There is now three entries in the group view but two entries in the column view. The second entry appears twice in the group view.

Expected Results:  
There should be two entries in both views.
Comment 1 Robby Stephenson 2010-11-15 01:57:00 UTC
SVN commit 1197149 by rstephenson:

Fix bug with updating gorups for derived values after modifying them.

BUG:256374


 M  +4 -0      ChangeLog  
 M  +7 -6      src/collection.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1197149