Fix bug with updating gorups for derived values after modifying them.

BUG:256374

svn path=/trunk/extragear/office/tellico/; revision=1197149